--- a/notebooks/exploratory/exploratory_analysis.ipynb
+++ b/notebooks/exploratory/exploratory_analysis.ipynb
@@ -1517,6 +1517,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49cd700e-f50b-4fe0-907f-4ce91b219e5a",
+   "metadata": {},
+   "source": [
+    "# Gradient Boost Confusion Matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "acd16f9f-36f7-4a71-87dd-e220d2f42462",
